--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,12 +62,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Cards\BoardCard.cs" />
     <Compile Include="Assets\Scripts\Cards\Card.cs" />
     <Compile Include="Assets\Scripts\Cards\CardTemplate.cs" />
     <Compile Include="Assets\Scripts\Cards\CardType.cs" />
     <Compile Include="Assets\Scripts\Cards\House.cs" />
     <Compile Include="Assets\Scripts\Cards\Set.cs" />
-    <Compile Include="Assets\Scripts\Effects\EffectScope.cs" />
+    <Compile Include="Assets\Scripts\Effects\EffectDuration.cs" />
     <Compile Include="Assets\Scripts\Effects\IEffect.cs" />
     <Compile Include="Assets\Scripts\Game.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
